[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "langgraph-checkpoint-redis>=0.3.2",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
]
