[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "langgraph-checkpoint-redis>=0.3.2",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "pandas>=2.3.3",
    "langgraph-checkpoint-postgres>=3.0.3",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "requests>=2.32.5",
    "langchain-tavily>=0.2.16",
    "streamlit>=1.53.1",
    "langchain-mcp-adapters>=0.2.1",
]
